added test file, table and style css

--- a/1_test.html
+++ b/1_test.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Fajny dokument</title>
 </head>
 <body>
-    
+    <h3>Lista</h3>
+    <ul type='square'>
+        <li>Miasta</li>
+        <ol type='1' class='blue'>
+            <li>Poznań</li>
+            <li>Gniezno</li>
+            <li>Warszawa</li>
+        </ol>
+        <li>Kraje</li>
+        <ol type='1' class='red'>
+            <li>Polska</li>
+            <li>USA</li>
+        </ol>
+    </ul>
+
+    <a href=".\table.html">Pokaż tabele</a>
 </body>
 </html>
